--- a/Tipologia_prac2.ipynb
+++ b/Tipologia_prac2.ipynb
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "XypPk1bwKDmP"
       },
@@ -37,7 +37,9 @@
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline\n",
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "\n",
+        "##prueba"
       ]
     },
     {
@@ -54,7 +56,7 @@
         "id": "mOnSXLnRKzje",
         "outputId": "0e876e4b-c8fb-4e8e-bf2d-e389d116f27f"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -367,7 +369,7 @@
         "id": "h2L9gVDmPM32",
         "outputId": "1dec47cc-c76c-4c0e-9942-871be00d5ec8"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -796,7 +798,7 @@
         "id": "T5hFsxxRP_oO",
         "outputId": "1908468e-f4c6-4f77-b57d-1d4ce3943823"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -873,7 +875,7 @@
         "id": "OawhYDIKQqqr",
         "outputId": "3c083418-f32c-4891-c33e-f5507d083d2b"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
